# rwmp2022

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/rwmp2022/: __init__.py
tests/: test_rwmp2022.py
